# lykey-rest-api

./: .env  .gitignore  README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 30f31f5fde55_update_user_table.py  3d002a646b8a_fix.py  46c23db1901a_update_user.py  5ca042180835_product_table.py  7d253b6ec8cd_f.py  965ced17b08a_create_user_table.py  9b19627dfaba_create_user_table.py  bebd3ca4ff13_fix.py  cb78fa79effd_product_table.py  d80e511c8cf3_update_user_table.py  f6c46e1c9b68_create_user_model.py
lib/database/: models.py  mysql.py
lib/email/: templates.txt
lib/helpers/: auth.py  config.py  mail.py  session.py
lib/models/: auth.py  email.py  products.py  users.py
routers/: auth.py  email.py  products.py  users.py
routers/account/: __init__.py  products.py
